# skills

./: .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml  pyrefly.toml  pytest.ini  ruff.toml  skills.py
.github/workflows/: ci.yml
docs/adr/: 0001-mysk-block-for-ownership.md  0003-mysk-block-key-names.md  0004-typer-cli-conventions.md  0005-deploy-all-states-warn-deprecated.md  0005-skill-library-at-platformdirs-path.md  0006-skill-library-invariant.md  0007-generic-passthrough-for-non-mysk-frontmatter.md  0008-skill-operations-interactive-cli-pattern.md
docs/agents/: triage-labels.md
docs/diagrams/: skill-operations-pathway.md
skills/caveman-review/: SKILL.md
skills/grill-me/: SKILL.md
skills/grill-with-context/: ADR-FORMAT.md  SKILL.md
skills/improve-codebase-architecture/: SKILL.md
skills/jira-tickets/: SKILL.md
skills/setup-skills/: SKILL.md  domain.md  issue-tracker-github.md  issue-tracker-gitlab.md  issue-tracker-jira.md  issue-tracker-local.md
skills/tdd/: SKILL.md
skills/to-issues/: SKILL.md
skills/to-requirements/: SKILL.md
skills/to-tasks/: SKILL.md
skills/to-tickets/: SKILL.md
spikes/: frontmatter_tokens.py
src/mysk/: __init__.py  cli.py  skill_operation_pathway.py
tests/: test_docstring_style.py  test_frontmatter.py  test_lifecycle.py  test_provenance.py  test_skill.py  test_skill_operation_pathway.py
tests/commands/: test_cleanup.py  test_delete_skill.py  test_deploy.py  test_import_skill.py  test_library.py  test_list.py  test_mark.py  test_refresh_skill.py  test_undeploy.py
tests/domain/: test_import_url.py  test_lifecycle.py  test_naming.py  test_provenance.py  (+1 more)
(+37 files in other folders)
