[project]
name = "mysk"
version = "0.1.0"
description = "CLI tool to manage and deploy agent skills"
authors = [
    { name = "Tim MacKay", email = "tim_mackay_git@fastmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "httpx>=0.28.0",
    "typer>=0.26.7",
]

[project.scripts]
mysk = "mysk.cli:app"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
lint = [
    "ruff>=0.11.0",
]
typecheck = [
    "pyrefly>=0.18.0",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
]
